--- a/docusaurusdemo_k/package.json
+++ b/docusaurusdemo_k/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@docusaurus/preset-classic": "^3.6.3",
+    "@easyops-cn/docusaurus-search-local": "^0.46.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
