--- a/docusaurusdemo_k/package.json
+++ b/docusaurusdemo_k/package.json
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@docsearch/react": "^3.8.2",
     "@docusaurus/preset-classic": "^3.6.3",
     "@docusaurus/theme-search-algolia": "^3.6.3",
     "@easyops-cn/docusaurus-search-local": "^0.46.1",
